tests/src/frontend/syntax/invalid/if_instead_of_when1.sk
fun test(): void {
  1 match {
  | x when (x == 1) -> "Nope\n"
  | x -> "Boom\n"
  }
}
